--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>金尊国际</title>
 </head>
 <body>
-<script language='javascript'>document.location='http://jz.jzzc168.com:8/'</script>
+<script language='javascript'>document.location='http://www.fvvvu.com/'</script>
 </body>
 </html>
